tests/fixtures/invalid/none_lt_str.py
# Cannot compare with < None and Str
x: bool = None < "hello"
